--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@
 
         </div>
     </div>
+    
+    <div class="welcome">
+      <div>
+      <h1 class="wel">Welcome to<br>midnight party</h1>
+      <p class="doll">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+      <button class="wellbtn">Join Now</button>
+      </div>
+      
+      <div>
+        <img src="resources/Group 70.png" class="gpsav" alt="">
+      </div>
+    </div>
 
   </body>
 </html>
