--- a/index.html
+++ b/index.html
@@ -43,5 +43,14 @@
       </div>
     </div>
 
+    <div class="txt">
+      <p class="textpera"><span class="text">Place:</span> New Park Hotel <br>
+        <span class="text">Date:</span> 31 December Night 2023 <br>
+        <span class="text">Time:</span> Evening 7.30 pm to 12.30 am <br></p>
+        <button class="jbtn">
+          Join Now
+        </button>
+    </div>
+
   </body>
 </html>
