section task three

--- a/index.html
+++ b/index.html
@@ -52,5 +52,22 @@
         </button>
     </div>
 
+    <div class="div2">
+      <div class="hhp">
+          <h3 class="nbo">NEW BEST OFFER</h3>
+          <h1 class="cs">Coming Soon</h1>
+          <p class="dsa">Dolor sit amet consectetur. Consequat <br> eget consectetur maecenas <br> sed molestie malesuada. Ipsum sed sodales <br> risus ut  pellentesque vel euismod. </p>
+      </div>
+      <div class="center">
+        <img src="resources/Ellipse 1.png" class="cen1" alt="">
+      </div>
+      <div class="hpi">
+          <h1 class="n">2024</h1>
+          <p class="dsac">Dolor sit amet consectetur. <br> Consequat eget consectetur <br> maecenas sed.</p>
+          <img src="resources/Group 96.png" alt="">
+      </div>
+
+    </div>
+
   </body>
 </html>
