--- a/index.html
+++ b/index.html
@@ -52,22 +52,54 @@
         </button>
     </div>
 
-    <div class="div2">
-      <div class="hhp">
-          <h3 class="nbo">NEW BEST OFFER</h3>
-          <h1 class="cs">Coming Soon</h1>
-          <p class="dsa">Dolor sit amet consectetur. Consequat <br> eget consectetur maecenas <br> sed molestie malesuada. Ipsum sed sodales <br> risus ut  pellentesque vel euismod. </p>
+    <div class="section5">
+      <div class="s5c1">
+        <h3 class="r">NEW BEST OFFER</h3>
+        <H1 class="cs">Coming Soon</H1>
+        <p class="dsac">Dolor sit amet consectetur. Consequat <br> eget consectetur maecenas <br>sed molestie malesuada. Ipsum sed sodales <br> risus ut pellentesque vel euismod. </p>
       </div>
-      <div class="center">
-        <img src="resources/Ellipse 1.png" class="cen1" alt="">
+
+      <div class="s5c2">
+        <img src="resources/Ellipse 1.png" class="ellipes" alt="">
       </div>
-      <div class="hpi">
-          <h1 class="n">2024</h1>
-          <p class="dsac">Dolor sit amet consectetur. <br> Consequat eget consectetur <br> maecenas sed.</p>
-          <img src="resources/Group 96.png" alt="">
+
+      <div class="s5c3">
+        <h1>2024</h1>
+        <p>Dolor sit amet consectetur. <br> Consequat eget consectetur <br> maecenas sed.</p>
+        <img src="resources/Group 96.png" alt="">
+      </div>
+    </div>
+
+    <div>
+
+      <div class="whd">
+        <h3>WHAT IS FUNCTIONAL</h3>
+        <h1>Holidays Sale 50%</h1>
+        <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed 
+          molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id fermentum amet amet sit consectetur.</p>
+      </div>
+
+      <div class="sec7">
+        <div class="bref">
+          <h3>THE BEST GIFTS</h3>
+          <h1>Our Awesome Portfolio</h1>
+          <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. <br> Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+        </div>
+        <div class="section7">
+          <img src="resources/Rectangle 3.png" alt="">
+          <img src="resources/Rectangle 4.png" alt="">
+          <img src="resources/Rectangle 5.png" alt="">
+        </div>
+        <div class="section7">
+          <img src="resources/Rectangle 6.png" alt="">
+          <img src="resources/Rectangle 7.png" alt="">
+          <img src="resources/Rectangle 8.png" alt="">
+        </div>
       </div>
 
     </div>
 
+
   </body>
+
 </html>
