--- a/index.html
+++ b/index.html
@@ -99,6 +99,17 @@
 
     </div>
 
+    <div class="txt">
+      <img src="resources/Group 61.png" alt="">
+      <h1>Subscribe Newsletter</h1>
+      <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+      
+      <div class="bsbs">
+        <input type="email" placeholder="user@gmail.com" class="bsb">
+        <button type="submit">Subscribe</button>
+      </div>
+    </div>
+
 
   </body>
 
